[wallpaper] Avoid using pluginId for indexing package indexes

Image takes a string and loads the relevant package at a given path
wallpapers+packageName

pluginId typically is the same as the package name on disk, but not
always, either due to bad metadata or it being deliberately mangled
during install to avoid escaped characters.

Returning the package path has the same desired effect for saving
chosen images by package names, but avoids the complexity above.

metaData presence is still queried to separate real packages from the
fake packages generated internally which represent just one image.

BUG: 423987


(cherry picked from commit 74e9f990ae6c461ec9848b68e537732eeb458eca)